<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/test_background"
   >


    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/shimmer"
        style="@style/Base.TextAppearance.AppCompat.Display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="45sp" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:background="@drawable/style_button2"
        android:onClick="onClickReg"
        android:text="@string/regist" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etPassword"
        android:layout_below="@+id/shimmer"
        android:layout_marginTop="85dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/textColorBold"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/textColorBold"
        android:textColorHint="@color/colorPrimary" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/textColorBold"
        android:onClick="onClickLogin"
        android:text="@string/sign" />

    <Button
        android:id="@+id/btnForget"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@android:color/transparent"
        android:onClick="onClickForget"
        android:textSize="13sp"
        android:text="@string/forgot"
        android:textColor="@android:color/black" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/btnForget"
        android:layout_below="@+id/btnForget"
        android:layout_marginTop="11dp" />

</RelativeLayout>