<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/phoneAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="16dp"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="RU"
                    app:ccp_defaultLanguage="RUSSIAN"/>

                <EditText
                    android:id="@+id/numText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Номер"
                    android:inputType="phone"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <Button
        android:id="@+id/setNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneAuth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onSetNum"
        android:text="Отправить" />

    <Button
        android:id="@+id/restartNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setNum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onresNum"
        android:text="Повторить" />

    <EditText
        android:id="@+id/codeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restartNum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="phone"
        android:singleLine="true"
        android:textColor="@color/textColorBold"
        android:textColorHint="@color/colorPrimary" />

    <Button
        android:id="@+id/setCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/restartNum"
        android:layout_below="@+id/codeText"
        android:layout_marginTop="30dp"
        android:onClick="onCode"
        android:text="Проверить" />

    <TextView
        android:id="@+id/warningphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/phonemoney" />


</RelativeLayout>
