<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.arlhar_membots.Login_and_Regist.Main2Activity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="#fffafa"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:titleTextColor="@android:color/white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_action_name"
                    android:background="@android:color/transparent"
                    android:id="@+id/btnBack"
                    android:onClick="back"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@+id/btnBack"
                    android:text="@string/title_activity_settings"
                    android:textColor="#050401"
                    android:textStyle="normal"
                    android:textSize="21sp" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="328dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/appbar_setting">

                    <TextView
                        android:id="@+id/title_users"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:text="@string/set_account"
                        android:textColor="#050401"
                        android:textSize="23sp"
                        android:textStyle="normal" />
                    <View
                        android:id="@+id/linesview"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/title_users"
                        android:background="@drawable/toolbar_dropshadow" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleImage_setting"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="85dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_below="@id/circleImage_setting"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/textName_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:ems="5"
                            android:inputType="textCapWords"
                            android:maxLength="10"
                             />
                        <EditText
                            android:id="@+id/textFamily_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:ems="7"
                            android:maxLength="13"
                            android:inputType="textCapWords"
                            />

                    </LinearLayout>


                    <ImageButton
                        android:id="@+id/edit_usernames"
                        android:layout_width="30dp"
                        android:layout_height="28dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="270dp"
                        android:onClick="onEditName"
                        android:background="@android:color/transparent"
                        android:src="@drawable/check_edit" />

                    <ImageButton
                        android:id="@+id/photo_change"
                        android:layout_width="38dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="212dp"
                        android:layout_marginEnd="65dp"
                        app:srcCompat="@drawable/change_camera" />
                   />


                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardCornerRadius="5dp"
                android:onClick="onclickHelp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:text="@string/set_account6"
                        android:textColor="#050401"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardCornerRadius="5dp"
                android:onClick="onclickDevelop"
                android:layout_marginBottom="13dp"
                android:layout_gravity="center_horizontal"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:text="@string/set_account7"
                        android:textColor="#050401"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardCornerRadius="5dp"
                android:onClick="logOut"
                android:layout_marginBottom="13dp"
                android:layout_gravity="center_horizontal"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:text="@string/set_account5"
                        android:textColor="#050401"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>
</android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>



</LinearLayout>
